# docker-python-poetry

./: action.yml
.github/workflows/: docker-build.yml
3.7-onbuild/: Dockerfile
3.8/: Dockerfile
3.8-onbuild/: Dockerfile
test/: pyproject.toml
test/test_docker/: __init__.py  get.py
